added more pages, (STMB) replacement'

--- a/begin/_posts/2000-01-01-intro.md
+++ b/begin/_posts/2000-01-01-intro.md
@@ -2,9 +2,28 @@
 title: "INTRODUCTION"
 style: two-col-page
 chapter : 1
+contents:
+- What is Arduino? 
+- What is (STMB)?
+- Hardware
 ---
+
+## What is Arduino?
+
+![Arduino Uno R3](/img/arduino_uno.svg){: .eighth-w .left }Arduino is an open-source electronics platform based on easy-to-use hardware and software. Arduino boards are able to read inputs - light on a sensor, a finger on a button, or a Twitter message - and turn it into an output - activating a motor, turning on an LED, publishing something online.
+
+## What is (STMB)?
+
+![Arduino Uno plus Breadboard](/img/arduino_breadboard.svg){: .half-w .center}
+
+(STMB) is a smart electronic breadboard with an Arduino UNO R3 compatible built inside. It is specifically designed to solve the following common issues using Arduino with a breadboard especially in the lab or classroom.
+
+* Reduce the headache of managing students' messy wires flying around microcontroller board and breadboard during class.
+* Enhance the current design (Arduino UNO) for native USB development without changing or adding extra components.
+* Improve adaptability, mountability and protection, enabling more projects to be built in the lab or classroom.
 
 ## Hardware
 
-## Software
+![(STMB) Block Diagram](/img/stemtera_breadboard_block_diagram.svg){: .quarter-w .left }Just like an Arduino UNO, the (STMB) has two micro-controllers soldered on the PCB (Printed Circuit Board). The ATMEL's ATmega32U2 and the ATmega328P. The ATmega32U2 serves as the bridge for USB communication between the computer and the ATmega328P. 
 
+In a normal Arduino UNO, this USB bridge only act as a bridge because the extra physical pins are not exposed. The (STMB) exposed all these extra pins to the breadboard's tie points, allowing native USB projects to be built.
