added new pages

--- a/begin/_posts/2000-01-01-intro.md
+++ b/begin/_posts/2000-01-01-intro.md
@@ -1,5 +1,5 @@
 ---
-title: "INTRODUCTION"
+title: "Introduction"
 style: two-col-page
 chapter : 1
 contents:
@@ -16,14 +16,16 @@ contents:
 
 ![Arduino Uno plus Breadboard](/img/arduino_breadboard.svg){: .half-w .center}
 
-(STMB) is a smart electronic breadboard with an Arduino UNO R3 compatible built inside. It is specifically designed to solve the following common issues using Arduino with a breadboard especially in the lab or classroom.
+The (STMB) is a smart electronic breadboard with an Arduino UNO R3 compatible built inside. It is specifically designed to solve common issues using Arduino with a breadboard especially in the lab or classroom. 
 
-* Reduce the headache of managing students' messy wires flying around microcontroller board and breadboard during class.
-* Enhance the current design (Arduino UNO) for native USB development without changing or adding extra components.
-* Improve adaptability, mountability and protection, enabling more projects to be built in the lab or classroom.
+The (STMB) is capable of taking **inputs**, for example the push of a button, and translate that information to trigger different types of **outputs**, for example turn on a light or motor. With these capabilities, the (STMB) can be used to build interactive physical systems by the use of software and hardware that can sense and response to physical world.
+
+Making mechanical LEGO&reg; projects with the (STMB) is easy because the bottom cover of the (STMB) is LEGO&reg; compatible.
 
 ## Hardware
 
-![(STMB) Block Diagram](/img/stemtera_breadboard_block_diagram.svg){: .quarter-w .left }Just like an Arduino UNO, the (STMB) has two micro-controllers soldered on the PCB (Printed Circuit Board). The ATMEL's ATmega32U2 and the ATmega328P. The ATmega32U2 serves as the bridge for USB communication between the computer and the ATmega328P. 
+![(STMB) Block Diagram](/img/stemtera_breadboard_block_diagram.svg){: .quarter-w .left }The (STMB) has 14 digital input/output pins (6 of which can be PWM outputs), 6 analog inputs, a 16 MHz crystal oscillator, a USB connection, a power jack, and a reset button. These input/output pins are just like human fingers. With a properly written software plus hardware, they can be used to touch, sense and feel the physical environment. Advanced users can also utilize the extra 21 digital input/output pins (3 of which can be PWM output) not available in an Arduino UNO R3. 
 
-In a normal Arduino UNO, this USB bridge only act as a bridge because the extra physical pins are not exposed. The (STMB) exposed all these extra pins to the breadboard's tie points, allowing native USB projects to be built.
+Just like an Arduino UNO, the (STMB) has two micro-controllers soldered on the PCB (Printed Circuit Board). The ATMEL's ATmega32U2 and the ATmega328P. The ATmega32U2 serves as the bridge for USB communication between the computer and the ATmega328P. 
+
+In a normal Arduino UNO, this USB bridge only act as a bridge because the extra physical pins are not exposed. The (STMB) exposed all these extra pins on the breadboard's tie points, thus providing more digital input/output pins and allowing these pins to natively communicate with the computer via the USB port (advance topic).
