--- a/begin/_posts/2000-01-03-software.md
+++ b/begin/_posts/2000-01-03-software.md
@@ -1,12 +1,23 @@
 ---
-title: "INTRODUCTION"
+title: "Introduction - Software"
 style: two-col-page
 contents:
-- Software 
+- Software
+- Sketches
+- Installing Arduino IDE 
 ---
 
 ## Software
 
+The (STMB) by itself is just a piece of physical hardware. You need to tell it what to do by sending a set of instructions to the micro-controller on the board. This set of instructions is normally referred to as **program**, **code** or **software**. There are a few ways to send the program to the (STMB), one of the most popular way is by using the **Arduino Integrated Development Environment (IDE)**.
+
+The Arduino IDE contains a text editor for writing code, a message area, a text console, a toolbar with buttons for common functions and a series of menus. It connects to the (STMB) hardware to upload programs and communicate with them. 
+
+## Sketches
+
+Programs written using Arduino IDE are called **sketches**. These sketches are written in the code editing area of the Arduino IDE and can compiled into a set of micro-controller instructions that can be uploaded into the (STMB)
+
+## Installing Arduino IDE
 
 
 
