--- a/en/begin/_posts/2000-01-01-intro.md
+++ b/en/begin/_posts/2000-01-01-intro.md
@@ -11,11 +11,11 @@ contents:
 
 ## What is Arduino?
 
-![Arduino Uno R3](/img/arduino_uno.svg){: .eighth-w .left }Arduino is an open-source electronics platform based on easy-to-use hardware and software. Arduino boards are able to read inputs - light on a sensor, a finger on a button, or a Twitter message - and turn it into an output - activating a motor, turning on an LED, publishing something online.
+![Arduino Uno R3](img/arduino_uno.svg){: .eighth-w .left }Arduino is an open-source electronics platform based on easy-to-use hardware and software. Arduino boards are able to read inputs - light on a sensor, a finger on a button, or a Twitter message - and turn it into an output - activating a motor, turning on an LED, publishing something online.
 
 ## What is (STMB)?
 
-![Arduino Uno plus Breadboard](/img/arduino_breadboard.svg){: .half-w .center}
+![Arduino Uno plus Breadboard](img/arduino_breadboard.svg){: .half-w .center}
 
 The (STMB) is a smart electronic breadboard with an Arduino UNO R3 compatible built inside. This 2 in 1 breadboard is specifically designed to solve common issues when using Arduino with a separate breadboard especially in the lab or classroom. 
 
@@ -25,7 +25,7 @@ Making mechanical LEGO&reg; projects with the (STMB) is easy because the bottom 
 
 ## Hardware
 
-![(STMB) Block Diagram](/img/stemtera_breadboard_block_diagram.svg){: .quarter-w .left }The (STMB) has 14 digital input/output pins (6 of which can be PWM outputs), 6 analog inputs, a USB connection, a power jack, and a reset button. These input/output pins are just like human fingers. With a properly written software plus hardware, they can be used to touch, sense and feel the physical environment. 
+![(STMB) Block Diagram](img/stemtera_breadboard_block_diagram.svg){: .quarter-w .left }The (STMB) has 14 digital input/output pins (6 of which can be PWM outputs), 6 analog inputs, a USB connection, a power jack, and a reset button. These input/output pins are just like human fingers. With a properly written software plus hardware, they can be used to touch, sense and feel the physical environment. 
 
 Just like an Arduino UNO, the (STMB) has two micro-controllers soldered on the PCB (Printed Circuit Board). The ATMEL's ATmega32U2 and the ATmega328P. The ATmega32U2 serves as the bridge for USB communication between the computer and the ATmega328P. 
 
