--- a/en/begin/_posts/2000-01-03-software.md
+++ b/en/begin/_posts/2000-01-03-software.md
@@ -20,5 +20,19 @@ Programs written using Arduino IDE are called **sketches**. These sketches are w
 
 ## Installing Arduino IDE
 
+In order to start writing sketches for your (STMB), you will need to install the lastest version of the Arduino IDE first from Arduino's website. Using an internet-enabled computer, open up your favourite Internet browser and type in the following URL into the browser's address bar:
 
+[www.arduino.cc/en/main/software](http://www.arduino.cc/en/main/software)
+{: .browser }
+
+Once the page is loaded, you will be presented with download choices based on various Operating Systems.
+
+![Arduino Download Image](img/arduino_download.svg){: .half-w }
+
+Click and download the appropriate Operating Sytem installation package for your computer. As soon as the download is completed, open up your Internet browser and type in the following URL into the browser's address bar to proceed to SparkFun's Installing Arduino IDE guide.
+
+[learn.sparkfun.com/tutorials/installing-arduino-ide](https://learn.sparkfun.com/tutorials/installing-arduino-ide)
+{: .browser }
+
+After the installation, execute the Arduino IDE on your computer. The user interface of Arduino IDE is divided into 9 sections. Navigate around the user interface to get familiar with the Arduino IDE.
 
