fixed meta image url

--- a/en/begin/_posts/2000-01-03-software.md
+++ b/en/begin/_posts/2000-01-03-software.md
@@ -34,5 +34,4 @@ Click and download the appropriate Operating Sytem installation package for your
 [learn.sparkfun.com/tutorials/installing-arduino-ide](https://learn.sparkfun.com/tutorials/installing-arduino-ide)
 {: .browser }
 
-After the installation, execute the Arduino IDE on your computer. The user interface of Arduino IDE is divided into 9 sections. Navigate around the user interface to get familiar with the Arduino IDE.
-
+After completing the installation, execute the Arduino IDE on your computer. The user interface of Arduino IDE is divided into 9 sections. Navigate around the user interface to get familiar with the Arduino IDE.
