--- a/en/begin/_posts/2000-01-03-software.md
+++ b/en/begin/_posts/2000-01-03-software.md
@@ -16,7 +16,7 @@ The Arduino IDE contains a text editor for writing code, a message area, a text 
 
 ## Sketches
 
-Programs written using Arduino IDE are called **sketches**. These sketches are written in the code editing area of the Arduino IDE and can compiled into a set of micro-controller instructions that can be uploaded into the (STMB)
+Programs written using Arduino IDE are called **sketches**. These sketches are written in the code editing area of the Arduino IDE and can compiled into a set of micro-controller instructions that can be uploaded into the (STMB).
 
 ## Installing Arduino IDE
 
@@ -25,11 +25,11 @@ In order to start writing sketches for your (STMB), you will need to install the
 [www.arduino.cc/en/main/software](http://www.arduino.cc/en/main/software)
 {: .browser }
 
-Once the page is loaded, you will be presented with download choices based on various Operating Systems.
+This URL will display a page with download choices based on various Operating Systems. 
 
 ![Arduino Download Image](img/arduino_download.svg){: .half-w }
 
-Click and download the appropriate Operating Sytem installation package for your computer. As soon as the download is completed, open up your Internet browser and type in the following URL into the browser's address bar to proceed to SparkFun's Installing Arduino IDE guide.
+Click and download the appropriate Operating Sytem installation package for your computer. As soon as the download is completed, if you are familiar with installing software, please proceed with the installation, otherwise open up your browser and type in the following URL into the browser's address bar to read SparkFun's Installing Arduino IDE guide.
 
 [learn.sparkfun.com/tutorials/installing-arduino-ide](https://learn.sparkfun.com/tutorials/installing-arduino-ide)
 {: .browser }
