added port icons

--- a/en/begin/_posts/2000-01-06-connect.md
+++ b/en/begin/_posts/2000-01-06-connect.md
@@ -24,7 +24,7 @@ In the open dialog box, type
 `devmgmt.msc`
 {: .keyboard }
 
-then click OK. Device Manager will be launched and display a list of devices connected to the computer. Double click `Ports (COM & LPT)` and the name of the (STMB)'s serial port can be seen as `Arduino Uno (COMx)`.
+then click OK. Device Manager will be launched and display a list of devices connected to the computer. Double click ![Port Icon](img/port_icon.svg){: .textimg }` Ports (COM & LPT) `{: .backhigh }  and the name of the (STMB)'s serial port should look like ![Port Icon](img/port_icon.svg){: .textimg }` Arduino Uno (COMx) `{: .backhigh }
 
 On a Mac computer and Linux computer, the (STMB) is automatically detected. To see the status of this automatic detection, open a terminal screen and type 
 
