--- a/en/begin/_posts/2000-01-03-software.md
+++ b/en/begin/_posts/2000-01-03-software.md
@@ -20,7 +20,7 @@ Programs written using Arduino IDE are called **sketches**. These sketches are w
 
 ## Installing Arduino IDE
 
-In order to start writing sketches for your (STMB), you will need to install the lastest version of the Arduino IDE first from Arduino's website. Using an internet-enabled computer, open up your favourite Internet browser and type the following URL into the browser's address bar:
+In order to start writing sketches for your (STMB), you will need to install the latest version of the Arduino IDE first from Arduino's website. Using an internet-enabled computer, open up your favourite Internet browser and type the following URL into the browser's address bar:
 
 [www.arduino.cc/en/main/software](http://www.arduino.cc/en/main/software)
 {: .browser }
@@ -29,7 +29,7 @@ This URL will display a page with download choices based on various Operating Sy
 
 ![Arduino Download Image](img/arduino_download.svg){: .half-w }
 
-Click and download the appropriate Operating Sytem installation package for your computer. As soon as the download is completed, if you are familiar with installing software and drivers, please proceed with the installation, otherwise open up your browser and type the following URL into the browser's address bar to read SparkFun's Installing Arduino IDE guide.
+Click and download the appropriate Operating System installation package for your computer. As soon as the download is completed, if you are familiar with installing software and drivers, please proceed with the installation, otherwise open up your browser and type the following URL into the browser's address bar to read SparkFun's Installing Arduino IDE guide.
 
 [learn.sparkfun.com/tutorials/installing-arduino-ide](https://learn.sparkfun.com/tutorials/installing-arduino-ide)
 {: .browser }
