--- a/en/begin/_posts/2000-01-06-connect.md
+++ b/en/begin/_posts/2000-01-06-connect.md
@@ -14,7 +14,7 @@ After getting use with the user interface of Arduino IDE, you can now connect th
 
 First, connect the larger end of the [Micro USB cable](https://www.sparkfun.com/products/10215) to your computer. Second, connect the other smaller end of the Micro USB cable to the (STMB). The green LED light on the (STMB) will turned on and different types of Operating System might also produce a sound indicating that a USB device has being plugged into the computer.
 
-On a Windows computer, if you are first time connecting the (STMB), a dialog window will pop up telling you that there is a new device detected. Windows will search for the device driver installed previously and create a serail port on your computer. If you wish to know the name of the serial port, type
+On a Windows computer, if you are first time connecting the (STMB), a dialog window will pop up telling you that there is a new device detected. Windows will search for the device driver installed previously and create a serial port on your computer. If you wish to know the name of the serial port, type
 
 `Win + r`
 {: .keyboard }
