fixed css alignment

--- a/en/begin/_posts/2000-03-03-current.md
+++ b/en/begin/_posts/2000-03-03-current.md
@@ -31,7 +31,7 @@ Set the multimeter's knob to the highest possible current setting first, and als
 In order to measure the current, we need to break the circuit's loop and let the current flow into the multimeter. The above example shows current flow from the batteries passing through the 1K (1000 Ohm) resistor and into the multimeter then back to the negative terminal of the bottom battery. This forms a ***closed loop***. The reading is 0.003A = 3 mA.
 
 Formula, 
-<br/>I = V ÷ R 
+I = V ÷ R 
 <br/>I = 3V ÷ 1000Ω
 <br/>I = 0.003A
-{: .info }
+{: .success }
