--- a/en/begin/_posts/2000-03-03-current.md
+++ b/en/begin/_posts/2000-03-03-current.md
@@ -9,7 +9,7 @@ contents:
 
 ## Current
 
-![Current and Electrons Flow](img/current_electrons_flow.svg){: .half-w .center}
+![Current and Electrons Flow](img/current_electrons_flow.svg){: .half-w }
 
 Despite current is the flow of electrons (negative) through a conducting medium to positive charged atoms, current flow is ofteni or normally defined as ***Conventional current***, where it flows from **positive** terminal to the **negative**. In this guide, we will be referencing ***Conventional current*** as current.
 
@@ -24,7 +24,7 @@ Formula, **I** = **V ÷ R** ( Current = Voltage ÷ Resistance) -  Ohm's law.
 
 ## How to Measure Current
 
-![How to Measure Current](img/measure_current.svg){: .half-w .center}
+![How to Measure Current](img/measure_current.svg){: .half-w }
 
 Set the multimeter's knob to the highest possible current setting first, and also make sure that the current fuse rating of the multimeter is high enough to support the current you wish to measure. In the above example, the rough estimated current is only a few milliamp (1 milliamp is 1/1000 amp) based on Ohm's law, 3V ÷ 1000 Ohm ( 2 x 1.5V battery ÷ 1000 Ohm resistor). Therefore, setting the knob to 200mA setting is a good start point.
 
