changed to single column layout

--- a/en/begin/_posts/2000-01-03-software.md
+++ b/en/begin/_posts/2000-01-03-software.md
@@ -27,7 +27,7 @@ In order to start writing sketches for your (STMB), you will need to install the
 
 This URL will display a page with download choices based on various Operating Systems. 
 
-![Arduino Download Image](img/arduino_download.svg){: .half-w }
+![Arduino Download Image](img/arduino_download.svg){: .full-w }
 
 Click and download the appropriate Operating System installation package for your computer. As soon as the download is completed, if you are familiar with installing software and drivers, please proceed with the installation, otherwise open up your browser and type the following URL into the browser's address bar to read SparkFun's Installing Arduino IDE guide.
 
