--- a/en/begin/_posts/2000-01-05-ide.md
+++ b/en/begin/_posts/2000-01-05-ide.md
@@ -5,5 +5,5 @@ contents:
 - Arduino IDE 
 ---
 
-![Arduino IDE](img/arduino_ide.svg){: .full-h .center }
+![Arduino IDE](img/arduino_ide.svg){: .full-w .center }
 
