--- a/en/begin/_posts/2000-03-06-voltage.md
+++ b/en/begin/_posts/2000-03-06-voltage.md
@@ -9,7 +9,7 @@ contents:
 
 ## Voltage
 
-![Potential Difference](img/potential_difference.svg){: .eighth-w-w .center }
+![Potential Difference](img/potential_difference.svg){: .half-h .center }
 
 **Voltage** is the pressure or force from an electrical circuit's power source that "pushes" charged electrons through conductors. The greater the **voltage**, the greater is its ability to "push" the electrons through a given circuit. **Voltage** is also called **potential**. The difference in voltage between any two points or terminals in a circuit is known as the **potential difference**, commonly called the **voltage drop**. There are two different voltages, AC (alternating current) voltage and DC (direct current) voltage. AC flows in both directions and is commonly used in electrical wall plug. DC flows in one direction and is commonly used by battery operated circuits. By using a special circuit, AC can be coverted into DC and vice versa. In this guide, we will only be learning circuits in DC.
 
@@ -18,11 +18,10 @@ The unit for voltage or potential difference is volt with a unit symbol of ***V*
 Formula, **V**=**IR** or **E**=**IR** ( Voltage = Current x Resistance) -  Ohm's law.
 {: .info }
 
-<br clear="all">
 
 ## How to Measure DC Voltage
 
-![How to Measure Voltage](img/measure_voltage.svg){: .half-w .center }
+![How to Measure Voltage](img/measure_voltage.svg){: .full-w .center }
 
 By using a multimeter, turn the mulimeter's knob to the *voltage* range. Touch the RED (positive) probe on one of the point and the BLACK (negative) probe to the other point. The display tells you the *potential difference* (voltage) of the two points in Volts.
 
