--- a/en/begin/_posts/2000-04-03-exercise-2.md
+++ b/en/begin/_posts/2000-04-03-exercise-2.md
@@ -3,7 +3,33 @@ title: "Getting Started with Circuits"
 style: two-col-page
 lang: en
 contents:
-- Exercise 2
+- Exercise 2 - Pulse Width Modulation PWM
+
+parts:
+ RES_330R: 1
+ LED_RED: 1
+ JUMPER_WIRE: 2
+schematic:
+ exercise_01_schematic.svg
+breadboard:
+ exercise_01_breadboard.svg
 ---
 
-## Exercise 2
+## Exercise 2 - Pulse Width Modulation PWM
+
+
+
+{% include schematic.html %}
+
+
+
+{% include parts.html %}
+
+1. Connect a JUMPER WIRE to GND and 33J.
+2. Connect a JUMPER WIRE to PIN3 and 38J.
+3. Connect a 330Ω RESISTOR to 34H and 38H.
+4. Connect the anode (longer) pin of the RED LED to 34G and cathode (shorter) pin to 33G.
+{: .connections }
+
+{% include breadboard.html %}
+
