--- a/en/begin/_posts/2000-01-06-connect.md
+++ b/en/begin/_posts/2000-01-06-connect.md
@@ -8,7 +8,7 @@ contents:
 
 ## Connect the (STMB)
 
-![Connecting (STMB) to computer](img/connect_stemtera.svg){: .half-w }
+![Connecting (STMB) to computer](img/connect_stemtera.svg){: .full-w }
 
 After getting use with the user interface of Arduino IDE, you can now connect the (STMB) to your computer. You will need a [Micro USB cable](https://www.sparkfun.com/products/10215) for the connection. 
 
