--- a/en/begin/_posts/2000-04-03-exercise-2.md
+++ b/en/begin/_posts/2000-04-03-exercise-2.md
@@ -13,15 +13,14 @@ schematic:
  exercise_01_schematic.svg
 breadboard:
  exercise_01_breadboard.svg
+
 ---
 
 ## Exercise 2 - Pulse Width Modulation PWM
 
-
+For this exercise we will be using the same circuit as the one we used for exercise 1. If you have already done exercise 1, just skip to Write and Upload section. 
 
 {% include schematic.html %}
-
-
 
 {% include parts.html %}
 
@@ -32,4 +31,3 @@ breadboard:
 {: .connections }
 
 {% include breadboard.html %}
-
