added more exercise 2

--- a/en/begin/_posts/2000-04-03-exercise-2.md
+++ b/en/begin/_posts/2000-04-03-exercise-2.md
@@ -3,7 +3,7 @@ title: "Getting Started with Circuits"
 style: two-col-page
 lang: en
 contents:
-- Exercise 2 - Pulse Width Modulation PWM
+- Exercise 2 - Pulse Width Modulation (PWM)
 
 parts:
  RES_330R: 1
@@ -16,7 +16,17 @@ breadboard:
 
 ---
 
-## Exercise 2 - Pulse Width Modulation PWM
+## Exercise 2 - Pulse Width Modulation (PWM)
+
+Pulse width modulation is a modulation technique used to encode a message into a pulsing signal. Even though this is a modulation technique for encoding information for transmission, it is widely used in controlling the brightness of an LED and the speed of a motor.
+
+A PWM signal consists of two main components that define its behavior: frequency and duty cycle. The frequency determines how fast the PWM completes a cycle (i.e. 1000 Hz frequency would be 1000 cycles per second). The duty cycle describes the amount of on-time as a percentage of the total time of a cycle.
+
+![Pulse Width Modulation](img/exercise_02_pwm.svg){: .full-w }
+
+In digital electronics, when a signal is at 5V, we call this ON, and when a signal is at 0V, we call this OFF. From the above image, the first signal is shown as 10% duty cycle, which means its ON time is 10% of a cycle and its OFF time is 90% of a cycle. The second signal is 30% duty cycle because its ON time is 30% of a cycle and its OFF time is 70% of a cycle. A 100% duty cycle means the signal is ON all the time.
+
+By varying the duty cycle of a signal, we can control the percentage of ON time for a circuit, hence indirectly control, for example, the brightness of an LED. 100% duty cycle will have the LED turned ON in full brightness and a 50% duty cycle will have the LED turned ON in half brightness.
 
 For this exercise we will be using the same circuit as the one we used for exercise 1. If you have already done exercise 1, just skip to Write and Upload section. 
 
