--- a/en/begin/_posts/2000-03-06-voltage.md
+++ b/en/begin/_posts/2000-03-06-voltage.md
@@ -25,7 +25,7 @@ Formula, **V**=**IR** or **E**=**IR** ( Voltage = Current x Resistance) -  Ohm's
 
 By using a multimeter, turn the mulimeter's knob to the *voltage* range. Touch the RED (positive) probe on one of the point and the BLACK (negative) probe to the other point. The display tells you the *potential difference* (voltage) of the two points in Volts.
 
-In the above example, two 1.5V AA batteries connected in series has a voltage of 3V. asdfasdf asdf asdf asdf asdf asdf asdf asdf asdfa sdf asdf asdfasdf
+In the above example, two 1.5V AA batteries connected in series has a voltage of 3V.
 
 If your multimeter is not an auto-ranging multimeter, always set the range to the highest first, then work downwards until the desired reading is achieved.
 {: .info }
