added image tag

--- a/en/begin/_posts/2000-04-03-exercise-2.md
+++ b/en/begin/_posts/2000-04-03-exercise-2.md
@@ -1,5 +1,5 @@
 ---
-title: "Getting Started with Circuits"
+title: "Exercise 2 - Pulse Width Modulation (PWM)"
 style: two-col-page
 lang: en
 contents:
@@ -22,7 +22,7 @@ Pulse width modulation is a modulation technique used to encode a message into a
 
 A PWM signal consists of two main components that define its behavior: frequency and duty cycle. The frequency determines how fast the PWM completes a cycle (i.e. 1000 Hz frequency would be 1000 cycles per second). The duty cycle describes the amount of on-time as a percentage of the total time of a cycle.
 
-![Pulse Width Modulation](img/exercise_02_pwm.svg){: .full-w }
+![(STMB) - Pulse Width Modulation](img/exercise_02_pwm.svg){: .full-w }
 
 In digital electronics, when a signal is at 5V, we call this ON, and when a signal is at 0V, we call this OFF. From the above image, the first signal is shown as 10% duty cycle, which means its ON time is 10% of a cycle and its OFF time is 90% of a cycle. The second signal is 30% duty cycle because its ON time is 30% of a cycle and its OFF time is 70% of a cycle. A 100% duty cycle means the signal is ON all the time.
 
