--- a/en/begin/_posts/2000-01-01-intro.md
+++ b/en/begin/_posts/2000-01-01-intro.md
@@ -25,7 +25,9 @@ Making mechanical LEGO&reg; projects with the (STMB) is easy because the bottom 
 
 ## Hardware
 
-![(STMB) Block Diagram](img/stemtera_breadboard_block_diagram.svg){: .half-w .left }The (STMB) has 14 digital input/output pins (6 of which can be PWM outputs), 6 analog inputs, a USB connection, a power jack, and a reset button. These input/output pins are just like human fingers. With a properly written software plus hardware, they can be used to touch, sense and feel the physical environment. 
+![(STMB) Block Diagram](img/stemtera_breadboard_block_diagram.svg){: .full-w }
+
+The (STMB) has 14 digital input/output pins (6 of which can be PWM outputs), 6 analog inputs, a USB connection, a power jack, and a reset button. These input/output pins are just like human fingers. With a properly written software plus hardware, they can be used to touch, sense and feel the physical environment. 
 
 Just like an Arduino UNO, the (STMB) has two micro-controllers soldered on the PCB (Printed Circuit Board). The ATMEL's ATmega32U2 and the ATmega328P. The ATmega32U2 serves as the bridge for USB communication between the computer and the ATmega328P. 
 
