--- a/en/begin/_posts/2000-04-09-exercise-5.md
+++ b/en/begin/_posts/2000-04-09-exercise-5.md
@@ -1,9 +1,36 @@
 ---
-title: "Getting Started with Circuits"
+title: "Exercise 5 - Buzzer Music"
 style: two-col-page
 lang: en
 contents:
-- Exercise 5
+- Exercise 5 - Buzzer Music
+
+parts:
+ JUMPER_WIRE: 2
+ BUZZER: 1
+schematic:
+ exercise_05_schematic.svg
+breadboard:
+ exercise_05_breadboard.svg
+
 ---
 
-## Exercise 5
+## Exercise 5 - Buzzer Music
+
+The (STMB) can be used to produce musical note by sending out digital pulses in frequency corresponding to that musical note. When this frequency is being sent to a buzzer, the internal of the buzzer vibrates and thus producing a sound.  
+
+{% include schematic.html %}
+
+{% include parts.html %}
+
+
+1. Connect the positive terminal of the buzzer to 33I.
+2. Connect the negative terminal of the buzzer to 34I.
+3. Connect a wire to GND and 34J.
+4. Connect a wire to PIN8 and 33J.  
+{: .connections }
+
+NOTE: If you have a different buzzer, connect the positive terminal of the buzzer to PIN8 and the negative terminal to GND. It is not required to follow exactly as per above's connection.
+{: .info }
+
+{% include breadboard.html %}
