tidied image spacing and size

--- a/en/begin/_posts/2000-01-01-intro.md
+++ b/en/begin/_posts/2000-01-01-intro.md
@@ -15,7 +15,7 @@ contents:
 
 ## What is (STMB)?
 
-![Arduino Uno plus Breadboard](img/arduino_breadboard.svg){: .three-quarter-w-w .center}
+![Arduino Uno plus Breadboard](img/arduino_breadboard.svg){: .full-w }
 
 The (STMB) is a smart electronic breadboard with an Arduino UNO R3 compatible built inside. This 2 in 1 breadboard is specifically designed to solve common issues when using Arduino with a separate breadboard especially in the lab or classroom. 
 
