updated LUFA setup

--- a/en/lufasetup/_posts/2000-01-01-intro.md
+++ b/en/lufasetup/_posts/2000-01-01-intro.md
@@ -84,6 +84,7 @@ Once the download is completed, unzip the package to a temporary location. Copy 
 
 ![Copy dfu-programmer to bin of AVR Toolchain](img/dfu-copy.svg){: .full-w }
 
+
 When copied correctly, you can see that the `dfu-programmer.exe` is in the same folder as the other tools like, `date.exe`, `dd.exe`, `df.exe`, `echo.exe` and etc.
 
 `dfu-programmer` is now installed with the AVR Toolchain.
@@ -94,7 +95,32 @@ Do not remove the unzipped files of the `dfu-programmer`, we need it for the nex
 
 ## Step 3 - Install DFU Driver
 
-When the ATmega32U2 of the (STMB) operates in DFU mode, it requires DFU driver to work properly. 
+When the ATmega32U2 of the (STMB) operates in DFU mode, it requires DFU driver to work properly.
+
+Connect the (STMB) to the computer, if you have not connect the (STMB) to your computer before, please refer to the (STMB) Beginner's Guide section [Connect the (STMB)](http://learn.stemtera.com/en/begin/#page7).
+
+Type the following to launch device manager:
+
+`Win + r`
+{: .keyboard}
+
+In the open dialog box, type
+
+`devmgmt.msc`
+{: .keyboard }
+
+then click OK. Device Manager will be launched and display a list of devices connected to the computer. Double click ![Port Icon](../begin/img/port_icon.svg){: .textimg }` Ports (COM & LPT) `{: .backhigh }  and the name of the (STMB)'s serial port should look like ![Port Icon](../begin/img/port_icon.svg){: .textimg }` Arduino Uno (COMx) `{: .backhigh }
+
+Now, we need to make the ATmega32U2 to operate in DFU mode. To do that, use a jumper wire, connect one end of the jumper wire to `GND` and the other end to `RST`. While the jumper is still connected to `GND` and `RST`, you will notice that the serial port of the (STMB) has disappear from device manager.
+
+Remove the jumper wire and Windows will pop up a message saying a new device is found and it will try to locate the driver for it. Because DFU driver is not officially in Windows' library repository, the search for the driver will failed. 
+
+When this happens, you can see a device called `Arduino Uno DFU` with an exclamation mark showing under `Other devices` in the device manager. Right click on this device and select `Update driver`.
+
+![Update Arduino DFU Driver](img/Update_DFU_Driver.svg){: .three-quarter-w-w .center }
+
+On `Update driver` windows, select `Browse my computer for driver software`.
+
 
 
 ## Step 4 - Install MinGW
