--- a/en/lufasetup/_posts/2000-01-01-intro.md
+++ b/en/lufasetup/_posts/2000-01-01-intro.md
@@ -26,7 +26,7 @@ There are 6 steps to get the LUFA environment installed:
 3. Install DFU Driver
 4. Install MinGW
 5. Install LUFA
-6. Compile & Execute HID Keyboard Demo
+6. Compile & Execute (STMB) HID Keyboard Demo
 
 In this guide, we will go through each of the steps in setting up the LUFA development environment for the ATmega32U2.   
 
@@ -90,7 +90,7 @@ When copied correctly, you can see that the `dfu-programmer.exe` is in the same 
 `dfu-programmer` is now installed with the AVR Toolchain.
 {: .success }
 
-Do not remove the unzipped files of the `dfu-programmer`, we need it for the next step.
+Do not remove the unzipped files of the `dfu-programmer`, they are needed for DFU driver installation later. 
 {: .warning }
 
 ## Step 3 - Install DFU Driver
@@ -113,18 +113,230 @@ then click OK. Device Manager will be launched and display a list of devices con
 
 Now, we need to make the ATmega32U2 to operate in DFU mode. To do that, use a jumper wire, connect one end of the jumper wire to `GND` and the other end to `RST`. While the jumper is still connected to `GND` and `RST`, you will notice that the serial port of the (STMB) has disappear from device manager.
 
-Remove the jumper wire and Windows will pop up a message saying a new device is found and it will try to locate the driver for it. Because DFU driver is not officially in Windows' library repository, the search for the driver will failed. 
+Remove the jumper wire and Windows will pop up a message saying a new device is found and it will try to locate the driver for it. Because DFU driver is not officially in Windows' driver repository, the search for the driver will most likely failed. 
 
-When this happens, you can see a device called `Arduino Uno DFU` with an exclamation mark showing under `Other devices` in the device manager. Right click on this device and select `Update driver`.
+When this happens, you will see a device called `Arduino Uno DFU` with an exclamation mark shown under `Other devices` in the device manager. 
+
+![Unknown DFU Device](img/Unknown_Device.svg){: .half-w .center}
+
+Right click on this device and select `Update driver`.
 
 ![Update Arduino DFU Driver](img/Update_DFU_Driver.svg){: .three-quarter-w-w .center }
 
-On `Update driver` windows, select `Browse my computer for driver software`.
+On the `Update driver` window, select `Browse my computer for driver software`. Click `Browse` button and navigate to the `dfu-programmer` folder that was previously unzipped in STEP 2. The folder's name is as below:
 
+    dfu-programmer-win-0.7.2\dfu-prog-usb-1.2.2
 
+Click next after selecting the above folder and Windows will start to install the driver. Click `Install` when the driver installer ask "*Would you like to install this device software?*" If the installation went well, you will see the following screen.
+
+![DFU Driver Installation Success](img/DFU_Update_Success.svg){: .three-quarter-w-w .center}
+
+Click `Close` and the DFU driver installation is now completed.
+{: .success }
 
 ## Step 4 - Install MinGW
+
+MinGW, a contraction of "Minimalist GNU for Windows", is an open source software development environment for Windows. It includes a port of the GNU Compiler Collection (GCC), GNU Binutils for Windows and miscellaneous utilities.
+
+Download MinGW installer from
+
+[MinGW Installer](http://www.mingw.org/download/installer)
+{: .browser }
+
+Once the download is finished, execute the installer `mingw-get-setup.exe`. Click `Install` follow by `Continue` to install as default preference. The installer will start to download and update necessary catalogue files. Once this process is completed, click `Continue`.
+
+MinGW Installation Manager screen will be displayed as below:
+
+![MinGW Installation Screen](img/MinGW_Installer.svg){: .full-w .center}
+
+Click `mingw32-base` and select `Mark for Installation`.
+
+Click `msys-base` and select `Mark for Installation`.
+
+When properly marked for installation, the checkbox next to the selected item will show an arrow that looks like a letter `C`.
+
+Click `Installation` menu, then select `Apply Changes`. When the `Schedule of Pending Actions` window ask `Okay to proceed?`, click `Apply` and the installer will start to download the required files. Wait for the installer to show `All changes were applied successfully; you may now close this dialogue.`, then click `Close`. Click `X` of the `MinGW Installation Manager` to exit.
+
+The installation of MinGW is now completed.
+{: .success }
+
 ## Step 5 - Install LUFA
-## Step 6 - Compile & Execute Keyboard Demo
+
+Download LUFA-151115 from
+
+[STEMTera LUFA Development files](https://github.com/STEMTera/STEMTera-Breadboard-B328-LUFA-Demo-Project/archive/master.zip)
+{: .browser }
+
+Unzip `STEMTera-Breadboard-B328-LUFA-Demo-Project-master.zip` to the Desktop. The resultant should have a folder structure like below:
+
+    C:\Users\[user name]\Desktop\STEMTera-Breadboard-B328-LUFA-Demo-Project-master
+
+You could use `git` to clone the project if you wish to. The project git is [https://github.com/STEMTera/STEMTera-Breadboard-B328-LUFA-Demo-Project.git](https://github.com/STEMTera/STEMTera-Breadboard-B328-LUFA-Demo-Project.git)
+{: .info }
+
+LUFA is now installed on your Desktop.
+{: .success }
+
+## Step 6 - Compile & Execute (STMB) HID Keyboard Demo
+
+Type
+
+`Win + r`
+{: .keyboard }
+
+In the open dialog box, type
+
+`cmd`
+{: .keyboard }
+
+then click OK. A `Command Prompt` window will be displayed. On the `Command Prompt` window type,
+
+`cd "Desktop\STEMTera-Breadboard-B328-LUFA-Demo-Project-master\Demos\Device\ClassDriver\Keyboard"`
+{: .keyboard }
+
+Type
+
+`dir`
+{: .keyboard}
+
+You should see the following files in the directory:
+
+```
+ Directory of C:\Users\jplie\Desktop\STEMTera-Breadboard-B328-LUFA-Demo-Project-master\Demos\Device\ClassDriver\Keyboard
+
+20/10/2017  02:13 PM    <DIR>          .
+20/10/2017  02:13 PM    <DIR>          ..
+20/10/2017  02:04 PM             2,472 asf.xml
+20/10/2017  02:04 PM    <DIR>          Config
+20/10/2017  02:04 PM             8,256 Descriptors.c
+20/10/2017  02:13 PM            12,672 Descriptors.d
+20/10/2017  02:04 PM             3,368 Descriptors.h
+20/10/2017  02:13 PM            10,720 Descriptors.o
+20/10/2017  02:04 PM           104,419 doxyfile
+20/10/2017  02:13 PM             4,328 Keyboard.bin
+20/10/2017  02:04 PM             7,895 Keyboard.c
+20/10/2017  02:13 PM            13,916 Keyboard.d
+20/10/2017  02:13 PM                13 Keyboard.eep
+20/10/2017  02:13 PM           128,022 Keyboard.elf
+20/10/2017  02:04 PM             3,321 Keyboard.h
+20/10/2017  02:13 PM            12,192 Keyboard.hex
+20/10/2017  02:13 PM           165,766 Keyboard.lss
+20/10/2017  02:13 PM           112,252 Keyboard.map
+20/10/2017  02:13 PM            13,628 Keyboard.o
+20/10/2017  02:13 PM             7,552 Keyboard.sym
+20/10/2017  02:04 PM             2,444 Keyboard.txt
+20/10/2017  02:04 PM             1,067 makefile
+              19 File(s)        614,303 bytes
+               3 Dir(s)  135,728,353,280 bytes free
+```
+
+Type 
+
+`make`
+{: .keyboard }
+
+and `make` will start to compile the (STMB) HID Keyboard Demo. Once the compilation is finished, the following `make` messages will be displayed.
+
+```
+ ../../../../LUFA/Drivers/USB/Class/Host/StillImageClassHost.o -o Keyboard.elf -lm -Wl,-Map=Keyboard.map,--cref -Wl,--gc-sections -Wl,--relax -mmcu=atmega32u2
+ [OBJCPY]  : Extracting HEX file data from "Keyboard.elf"
+avr-objcopy -O ihex -R .eeprom -R .fuse -R .lock -R .signature Keyboard.elf Keyboard.hex
+ [OBJCPY]  : Extracting EEP file data from "Keyboard.elf"
+avr-objcopy -O ihex -j .eeprom --set-section-flags=.eeprom="alloc,load" --change-section-lma .eeprom=0 --no-change-warnings Keyboard.elf Keyboard.eep || exit 0
+ [OBJCPY]  : Extracting BIN file data from "Keyboard.elf"
+avr-objcopy -O binary -R .eeprom -R .fuse -R .lock -R .signature Keyboard.elf Keyboard.bin
+ [OBJDMP]  : Extracting LSS file data from "Keyboard.elf"
+avr-objdump -h -d -S -z Keyboard.elf > Keyboard.lss
+ [NM]      : Extracting SYM file data from "Keyboard.elf"
+avr-nm -n Keyboard.elf > Keyboard.sym
+ [SIZE]    : Determining size of "Keyboard.elf"
+
+avr-size --mcu=atmega32u2 --format=avr Keyboard.elf
+AVR Memory Usage
+----------------
+Device: atmega32u2
+
+Program:    4328 bytes (13.2% Full)
+(.text + .data + .bootloader)
+
+Data:         53 bytes (5.2% Full)
+(.data + .bss + .noinit)
+
+
+ [INFO]    : Finished building project "Keyboard".
+
+C:\Users\jplie\Desktop\STEMTera-Breadboard-B328-LUFA-Demo-Project-master\Demos\Device\ClassDriver\Keyboard>
+```
+
+If the `make` process is successful, you will see 
+
+    [INFO]    : Finished building project "Keyboard".
+
+telling you that the "Keyboard" demo is compiled and ready.
+
+To install the "Keyboard" demo to the (STMB), type
+
+`make dfu-launch`
+{: .keyboard }
+
+`make` will launch `dfu-programmer` to flash the "Keyboard.hex" into the (STMB). A successful flashing will have messages similar to:
+
+```
+ [DFU]     : Programming FLASH with dfu-programmer using "Keyboard.hex"
+dfu-programmer atmega32u2 erase
+Checking memory from 0x0 to 0x6FFF...  Not blank at 0x1.
+Erasing flash...  Success
+make: [dfu-launch] Error 5 (ignored)
+dfu-programmer atmega32u2 flash Keyboard.hex
+Checking memory from 0x0 to 0x10FF...  Empty.
+0%                            100%  Programming 0x1100 bytes...
+[>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
+0%                            100%  Reading 0x7000 bytes...
+[>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
+Validating...  Success
+0x1100 bytes written into 0x7000 bytes memory (15.18%).
+dfu-programmer atmega32u2 launch --no-reset
+make: *** [dfu-launch] Error -2
+```
+
+To confirm that the dfu programming is successful, check for 
+
+    0%                            100%  Programming 0x1100 bytes...
+    [>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
+
+The above two lines show that `programming` of 0x110 bytes is successful. 
+
+    0%                            100%  Reading 0x7000 bytes...
+    [>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
+
+The above two lines show that `dfu-programmer` has successfully read back the "Keyboard.hex" that was programmed into the (STMB).
+
+
+    Validating...  Success
+    0x1100 bytes written into 0x7000 bytes memory (15.18%).
+
+If the read back code compared with the original compiled `hex` code and produced a matched result, `Validating... Success` message will be displayed.
+
+Ignore the last line `make: *** [dfu-launch] Error -2`, this is not an error. It was produced because the command `dfu-programmer atmega32u2 launch --no-reset` did not return any error code to `make`.
+{: .warning }
+
+(STMB) HID Keyboard Demo is now installed on the board. Launch NOTEPAD on the computer and use a jumper wire to short GND and PB0 ( or PB1, PB2, PB3, PB4, PB5). Each pin will produce a character on NOTEPAD like a keyboard being typed.
+{: .success }
+
+ 
+
+
+ 
+
+
+
+
+
+ 
+
+
+
+
+
 
 
