updated LUFA Setup

--- a/en/lufasetup/_posts/2000-01-01-intro.md
+++ b/en/lufasetup/_posts/2000-01-01-intro.md
@@ -296,10 +296,11 @@ Checking memory from 0x0 to 0x10FF...  Empty.
 Validating...  Success
 0x1100 bytes written into 0x7000 bytes memory (15.18%).
 dfu-programmer atmega32u2 launch --no-reset
-make: *** [dfu-launch] Error -2
 ```
 
-To confirm that the dfu programming is successful, check for 
+As soon as `make dfu-launch` has finished, you should be able to see a `HID Keyboard Device` appear on the `Keyboards` section of Device Manager.
+
+If there was no extra `HID Keybaord Device` showing, confirm that the dfu programming is successful, check for 
 
     0%                            100%  Programming 0x1100 bytes...
     [>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
@@ -317,26 +318,8 @@ The above two lines show that `dfu-programmer` has successfully read back the "K
 
 If the read back code compared with the original compiled `hex` code and produced a matched result, `Validating... Success` message will be displayed.
 
-Ignore the last line `make: *** [dfu-launch] Error -2`, this is not an error. It was produced because the command `dfu-programmer atmega32u2 launch --no-reset` did not return any error code to `make`.
+Ignore the line `make: [dfu-launch] Error 5 (ignored)`, this is not an error. It was produced because the command `dfu-programmer atmega32u2 erase` returned a warning due to the device was not blank before erase.
 {: .warning }
 
 (STMB) HID Keyboard Demo is now installed on the board. Launch NOTEPAD on the computer and use a jumper wire to short GND and PB0 ( or PB1, PB2, PB3, PB4, PB5). Each pin will produce a character on NOTEPAD like a keyboard being typed.
 {: .success }
-
- 
-
-
- 
-
-
-
-
-
- 
-
-
-
-
-
-
-
